--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Michroma&family=Titillium+Web:wght@400;700&display=swap');
+@import url('../node_modules/font-awesome/css/font-awesome.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Inter:wght@300;400&family=Lato:wght@100;400&family=Michroma&family=Roboto+Mono&family=Titillium+Web:wght@400;700&display=swap');
+
 
 :root {
   --redbull: color: #fff;
@@ -157,11 +160,10 @@ select,
 
 /* for Header.js */
 .header-box {
-  display: flex;
   justify-content: space-between;
+  margin: auto;
+  width: 75%;
   height: 50px;
-  padding-left: 200px;
-  padding-right: 200px;
   align-items: center;
 }
 
@@ -203,16 +205,121 @@ select,
 }
 
 /* tab bar */
-.tabs-bar {
-  height: 75px;
-  background-color: rgb(255, 17, 0);
-  display: flex;
-  align-items: center;
+
+/* tab bar */
+@media screen and (max-width: 1000px) {
+  .large-tabs{
+    display: none;
+  }
+  .header-box {
+    display: none;
+  }
+  .small-tabs-bar{
+    display: flex;
+  }
 }
 
-.tabs {
-  padding-left: 187px;
+@media screen and (min-width: 1000px) {
+.large-tabs{
   display: flex;
+}
+.header-box{
+  display: flex;
+}
+.small-tabs-bar{
+  display: none;
+}
+}
+
+.tabs-bar {
+width: 100%;
+height: 75px;
+background-color: rgb(255, 17, 0);
+display: flex;
+align-items: center;
+}
+
+.small-tabs-bar{
+justify-content: space-between;
+width: 90%;
+align-items: center;
+}
+
+.small-logo > p{
+  font-size: 25px;
+  color: white;
+  cursor: pointer;
+  font-family: 'Caveat', cursive;
+}
+
+.small-tabs-button{
+margin-left: 30px;
+color: white;
+transition: .4s ease-in;
+transition: .3s;
+}
+
+.small-tabs-button:hover{
+color: black;
+cursor: pointer;
+}
+
+#side-menu-underlay{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 5;
+  background-color: rgba(0, 0, 0, .8);
+  display: none;
+}
+
+.side-menu{
+  position: inherit;
+  width: 300px;
+  height: 100%;
+  z-index: 6;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.form-width {
+  width: 90%;
+}
+
+.side-menu-button{
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  border-style: none;
+  color: white;
+  transition: .3s;
+}
+
+.side-menu-button:hover{
+  cursor: pointer;
+}
+
+.menu-bar{
+  height: 75px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(255, 17, 0);
+}
+
+.menu-logo{
+  font-family: 'Caveat', cursive;
+  color: white;
+  margin: 0px 
+}
+
+.large-tabs {
+  margin: auto;
+  width: 80%;
   text-align: center;
 }
 
@@ -220,7 +327,7 @@ select,
   transform: translate(4px, 4px);
 }
 
-.tabs > a {
+.large-tabs > a {
   color: white;
   font-size: 24px;
   font-weight: bold;
@@ -230,13 +337,39 @@ select,
   text-decoration: none;
 }
 
-.tabs > a:hover {
+.large-tabs > a:hover {
   transition: .5s;
-  background-color:  black;
+  background-color:  rgb(19, 19, 19);
   cursor: pointer;
 }
 
-.countdown-bar {
+@media screen and (max-width: 1000px) {
+  .time-word{
+    display: none;
+  }
+  .colon{
+    display: block;
+  }
+  .upcoming-race,
+  .next-races{
+    height: 400px;
+  } 
+}
+
+@media screen and (min-width: 1000px) {
+  .time-word{
+    display: block;
+  }
+  .colon{
+    display: none;
+  }
+  .upcoming-race,
+  .next-races{
+    height: 800px;
+  }
+}
+
+.big-countdown-bar {
   width: 100%;
   background-color: rgb(48, 48, 48);
   height: 50px;
@@ -249,6 +382,7 @@ select,
   gap: 5px;
 }
 
+
 .number-box {
   width: 40px;
   height: 30px;
@@ -259,7 +393,20 @@ select,
 }
 
 /* drivers license */
+@media screen and (max-width: 1000px){
+  .race-info{
+    flex-direction: column;
+  }
+  .container{
+    width: 100%;
+  }
+}
 
+@media screen and (min-width: 1000px) {
+  .container{
+    width: 50%;
+  }
+}
 .landing-page-body {
   margin: 30px 0px;
   display: flex;
@@ -569,18 +716,16 @@ input::-webkit-inner-spin-button {
 
 .race-info {
   display: flex;
-  justify-content: space-between;
-  background-color: rgb(70, 70, 70);
+  width: 100%;
   overflow: hidden;
 }
 
 .upcoming-race,
 .next-races {
   border-style: none;
-  height: 550px;
-  width: 100%;
   overflow: hidden;
   transition: .2s;
+  width: 100%;
 }
 
 .upcoming-race:hover,
@@ -603,7 +748,7 @@ input::-webkit-inner-spin-button {
 }
 
 .overlay {
-  height: 550px;
+  height: 100%;
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
@@ -649,7 +794,6 @@ input::-webkit-inner-spin-button {
 }
 
 .container {
-  width: 50%;
   overflow: hidden;
 }
 
