more updates to mobile support

--- a/views/LeagueIndex.ejs
+++ b/views/LeagueIndex.ejs
@@ -9,6 +9,45 @@
 
     <title>My Leagues</title>
     <script>
+      var keys = {37: 1, 38: 1, 39: 1, 40: 1};
+
+        function preventDefault(e) {
+            e.preventDefault();
+        }
+
+        function preventDefaultForScrollKeys(e) {
+            if (keys[e.keyCode]) {
+            preventDefault(e);
+            return false;
+            }
+        }
+
+        // modern Chrome requires { passive: false } when adding event
+        var supportsPassive = false;
+        try {
+            window.addEventListener("test", null, Object.defineProperty({}, 'passive', {
+            get: function () { supportsPassive = true; } 
+            }));
+        } catch(e) {}
+
+        var wheelOpt = supportsPassive ? { passive: false } : false;
+        var wheelEvent = 'onwheel' in document.createElement('div') ? 'wheel' : 'mousewheel';
+
+        // call this to Disable
+        function disableScroll() {
+            window.addEventListener('DOMMouseScroll', preventDefault, false); // older FF
+            window.addEventListener(wheelEvent, preventDefault, wheelOpt); // modern desktop
+            window.addEventListener('touchmove', preventDefault, wheelOpt); // mobile
+            window.addEventListener('keydown', preventDefaultForScrollKeys, false);
+        }
+
+        // call this to Enable
+        function enableScroll() {
+            window.removeEventListener('DOMMouseScroll', preventDefault, false);
+            window.removeEventListener(wheelEvent, preventDefault, wheelOpt); 
+            window.removeEventListener('touchmove', preventDefault, wheelOpt);
+            window.removeEventListener('keydown', preventDefaultForScrollKeys, false);
+        }
         function leaguePage(leagueId, leagueName){
             fetch('/Leagues/LeagueInfo', {
             method: 'POST',
@@ -77,12 +116,14 @@
         let overlay = document.getElementById('side-menu-underlay')
         overlay.style.display = 'block'
         menuVis = true;
+        disableScroll();
       }
 
       function exitMenu(){
         let overlay = document.getElementById('side-menu-underlay')
         overlay.style.display = 'none'
         menuVis = false;
+        enableScroll();
       }
 
       addEventListener("click", (e) => {
@@ -91,6 +132,7 @@
           let overlay = document.getElementById('side-menu-underlay')
           overlay.style.display = 'none'
           menuVis = false;
+          enableScroll();
         }
       })
     </script>
@@ -135,6 +177,9 @@
         <form action="/logout" class="form-width" method="post">
           <button type="submit" class="register side-menu-button">SIGN OUT</button>
         </form>
+        <div class="filler">
+          &nbsp;
+        </div>
       <% } %>
     </div>
   </div>
