--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -10,7 +10,7 @@
 <body class="flex-body">
     <div class="log-header-box">
         <div class="left-header">
-            <a class="header-logo" href="/">F1 Bets</a>
+            <a class="header-logo" href="/">Race Gambit</a>
         </div>
         <div class="right-header">
             .
