--- a/views/Qualification.ejs
+++ b/views/Qualification.ejs
@@ -9,6 +9,45 @@
 
     <title>Qualification Bets</title>
     <script>
+      var keys = {37: 1, 38: 1, 39: 1, 40: 1};
+
+        function preventDefault(e) {
+            e.preventDefault();
+        }
+
+        function preventDefaultForScrollKeys(e) {
+            if (keys[e.keyCode]) {
+            preventDefault(e);
+            return false;
+            }
+        }
+
+        // modern Chrome requires { passive: false } when adding event
+        var supportsPassive = false;
+        try {
+            window.addEventListener("test", null, Object.defineProperty({}, 'passive', {
+            get: function () { supportsPassive = true; } 
+            }));
+        } catch(e) {}
+
+        var wheelOpt = supportsPassive ? { passive: false } : false;
+        var wheelEvent = 'onwheel' in document.createElement('div') ? 'wheel' : 'mousewheel';
+
+        // call this to Disable
+        function disableScroll() {
+            window.addEventListener('DOMMouseScroll', preventDefault, false); // older FF
+            window.addEventListener(wheelEvent, preventDefault, wheelOpt); // modern desktop
+            window.addEventListener('touchmove', preventDefault, wheelOpt); // mobile
+            window.addEventListener('keydown', preventDefaultForScrollKeys, false);
+        }
+
+        // call this to Enable
+        function enableScroll() {
+            window.removeEventListener('DOMMouseScroll', preventDefault, false);
+            window.removeEventListener(wheelEvent, preventDefault, wheelOpt); 
+            window.removeEventListener('touchmove', preventDefault, wheelOpt);
+            window.removeEventListener('keydown', preventDefaultForScrollKeys, false);
+        }
         function getBetStats(bet_id, betCategory){
             console.log(bet_id)
             console.log(betCategory)
@@ -31,12 +70,14 @@
         let overlay = document.getElementById('side-menu-underlay')
         overlay.style.display = 'block'
         menuVis = true;
+        disableScroll();
       }
 
       function exitMenu(){
         let overlay = document.getElementById('side-menu-underlay')
         overlay.style.display = 'none'
         menuVis = false;
+        enableScroll();
       }
 
       addEventListener("click", (e) => {
@@ -45,6 +86,7 @@
           let overlay = document.getElementById('side-menu-underlay')
           overlay.style.display = 'none'
           menuVis = false;
+          enableScroll();
         }
       })
     </script>
