--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,7 +17,6 @@
 
 body {
   margin: 0;
-
 }
 
 .error-message, 
@@ -50,12 +49,15 @@ body {
   width: 100%;
   align-items: center;
   margin: 0px;
-  padding-left: 200px;
   background-color: rgb(32, 32, 32);
 }
 
 .right-header {
   display: flex;
+}
+
+.left-header{
+  margin-left: 10%;
 }
 
 .header-logo {
@@ -98,10 +100,22 @@ body {
   text-decoration: none;
 }
 
+@media screen and (max-width: 1000px) {
+  .register-form-box{
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .register-form-box{
+    width: 600px;
+  }
+}
+
 .register-form-box,
 .login-box {
   margin-top: 30px;
-  width: 600px;
+  margin-bottom: 50px;
   padding: 20px;
   border-style: solid;
   border-radius: 10px;
@@ -217,6 +231,9 @@ select,
   .small-tabs-bar{
     display: flex;
   }
+  .league-list{
+    flex-direction: column;
+  }
 }
 
 @media screen and (min-width: 1000px) {
@@ -283,6 +300,10 @@ cursor: pointer;
   flex-direction: column;
   align-items: center;
   gap: 10px;
+}
+
+.filler{
+  flex: 1 0 auto;
 }
 
 .form-width {
@@ -536,11 +557,11 @@ cursor: pointer;
 /* league main page */
 .league-bar {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 20px;
   height: 80px;
   background-color: rgb(224, 224, 224);
+  width: 100%;
 }
 
 #leagueSearch {
@@ -606,7 +627,6 @@ cursor: pointer;
 .league-btn {
   border: none;
   border-width: 1px;
-  margin-left: 15px;
   height: 40px;
   width: 150px;
   border-radius: 5px;
@@ -632,6 +652,7 @@ cursor: pointer;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  align-items: center;
 }
 
 .league-box {
