--- a/views/Placement.ejs
+++ b/views/Placement.ejs
@@ -5,9 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../assets/css/style.css">
+
     <script src="https://kit.fontawesome.com/212b4b3f17.js" crossorigin="anonymous"></script>
     <title>Placement Bets</title>
     <script>
+
+        var keys = {37: 1, 38: 1, 39: 1, 40: 1};
+
+        function preventDefault(e) {
+            e.preventDefault();
+        }
+
+        function preventDefaultForScrollKeys(e) {
+            if (keys[e.keyCode]) {
+            preventDefault(e);
+            return false;
+            }
+        }
+
+        // modern Chrome requires { passive: false } when adding event
+        var supportsPassive = false;
+        try {
+            window.addEventListener("test", null, Object.defineProperty({}, 'passive', {
+            get: function () { supportsPassive = true; } 
+            }));
+        } catch(e) {}
+
+        var wheelOpt = supportsPassive ? { passive: false } : false;
+        var wheelEvent = 'onwheel' in document.createElement('div') ? 'wheel' : 'mousewheel';
+
+        // call this to Disable
+        function disableScroll() {
+            window.addEventListener('DOMMouseScroll', preventDefault, false); // older FF
+            window.addEventListener(wheelEvent, preventDefault, wheelOpt); // modern desktop
+            window.addEventListener('touchmove', preventDefault, wheelOpt); // mobile
+            window.addEventListener('keydown', preventDefaultForScrollKeys, false);
+        }
+
+        // call this to Enable
+        function enableScroll() {
+            window.removeEventListener('DOMMouseScroll', preventDefault, false);
+            window.removeEventListener(wheelEvent, preventDefault, wheelOpt); 
+            window.removeEventListener('touchmove', preventDefault, wheelOpt);
+            window.removeEventListener('keydown', preventDefaultForScrollKeys, false);
+        }
         function getBetStats(bet_id, betCategory){
             console.log(bet_id)
             console.log(betCategory)
@@ -24,18 +65,21 @@
                 console.info(err + " url" + url);
             });
         }
-        var menuVis = false;
 
+        var menuVis = false;
       function displayMenu(){
         let overlay = document.getElementById('side-menu-underlay')
         overlay.style.display = 'block'
         menuVis = true;
+        let body = document.getElementById('body')
+        disableScroll();
       }
 
       function exitMenu(){
         let overlay = document.getElementById('side-menu-underlay')
         overlay.style.display = 'none'
         menuVis = false;
+        enableScroll();
       }
 
       addEventListener("click", (e) => {
@@ -44,11 +88,13 @@
           let overlay = document.getElementById('side-menu-underlay')
           overlay.style.display = 'none'
           menuVis = false;
+          enableScroll();
         }
       })
+
     </script>
 </head>
-<body>
+<body id="body">
   <div id="side-menu-underlay">
     <div class="side-menu">
       <div class="menu-bar">
@@ -88,6 +134,9 @@
         <form action="/logout" class="form-width" method="post">
           <button type="submit" class="register side-menu-button">SIGN OUT</button>
         </form>
+        <div class="filler">
+          &nbsp;
+        </div>
       <% } %>
     </div>
   </div>
