--- a/views/5050.ejs
+++ b/views/5050.ejs
@@ -7,175 +7,10 @@
     <link rel="stylesheet" href="../../../assets/css/style.css">
     <script src="https://kit.fontawesome.com/212b4b3f17.js" crossorigin="anonymous"></script>
     <title>Yes/No</title>
-    <script>
-      var keys = {37: 1, 38: 1, 39: 1, 40: 1};
-
-        function preventDefault(e) {
-            e.preventDefault();
-        }
-
-        function preventDefaultForScrollKeys(e) {
-            if (keys[e.keyCode]) {
-            preventDefault(e);
-            return false;
-            }
-        }
-
-        // modern Chrome requires { passive: false } when adding event
-        var supportsPassive = false;
-        try {
-            window.addEventListener("test", null, Object.defineProperty({}, 'passive', {
-            get: function () { supportsPassive = true; } 
-            }));
-        } catch(e) {}
-
-        var wheelOpt = supportsPassive ? { passive: false } : false;
-        var wheelEvent = 'onwheel' in document.createElement('div') ? 'wheel' : 'mousewheel';
-
-        // call this to Disable
-        function disableScroll() {
-            window.addEventListener('DOMMouseScroll', preventDefault, false); // older FF
-            window.addEventListener(wheelEvent, preventDefault, wheelOpt); // modern desktop
-            window.addEventListener('touchmove', preventDefault, wheelOpt); // mobile
-            window.addEventListener('keydown', preventDefaultForScrollKeys, false);
-        }
-
-        // call this to Enable
-        function enableScroll() {
-            window.removeEventListener('DOMMouseScroll', preventDefault, false);
-            window.removeEventListener(wheelEvent, preventDefault, wheelOpt); 
-            window.removeEventListener('touchmove', preventDefault, wheelOpt);
-            window.removeEventListener('keydown', preventDefaultForScrollKeys, false);
-        }
-        function getBetStats(bet_id, betCategory){
-            console.log(bet_id)
-            console.log(betCategory)
-            fetch('/Bets/BetInfo', {
-                method: 'POST',
-                body: JSON.stringify({bet_id, betCategory}),
-                headers: {'Content-Type': 'application/json'}
-            })
-            .then((response) => {
-                if (response.redirected){
-                    window.location.href = response.url;
-                }
-            }).catch(function(err){
-                console.info(err + " url" + url);
-            });
-        }
-        var menuVis = false;
-
-      function displayMenu(){
-        let overlay = document.getElementById('side-menu-underlay')
-        overlay.style.display = 'block'
-        menuVis = true;
-        disableScroll();
-        
-      }
-
-      function exitMenu(){
-        let overlay = document.getElementById('side-menu-underlay')
-        overlay.style.display = 'none'
-        menuVis = false;
-        enableScroll();
-      }
-
-      addEventListener("click", (e) => {
-        let target = e.target
-        if (menuVis && target.id == 'side-menu-underlay'){
-          let overlay = document.getElementById('side-menu-underlay')
-          overlay.style.display = 'none'
-          menuVis = false;
-          enableScroll();
-        }
-      })
-    </script>
+    <%- include('partials/head') %>
 </head>
 <body>
-  <div id="side-menu-underlay">
-    <div class="side-menu">
-      <div class="menu-bar">
-        <h1 class="menu-logo" onclick="location.href='/'">Race Gambit</h1>
-        <i class="fa-solid fa-circle-xmark fa-lg" style="color: #ffadad" onclick="exitMenu();"></i>
-      </div>
-      <% if (!isAuth) { %>
-        <form action="/login" class="form-width">
-          <button type="submit" class="sign-in side-menu-button">SIGN IN</button>
-        </form>
-        <form action="/registration" class="form-width">
-          <button type="submit" class="register side-menu-button">REGISTER</button>
-        </form>
-      <% } else if (isAuth) { %>
-        <div class="menu-items">
-          <div class="menu-item" onclick="location.href='/bets/Placement';">
-            <p href="">PLACEMENT</p>
-            <i class="fa-solid fa-flag-checkered"></i>
-          </div>
-          <div class="menu-item" onclick="location.href='/bets/Qualification';">
-            <p href="">QUALIFICATION</p>
-            <i class="fa-solid fa-stopwatch"></i>
-          </div>
-          <div class="menu-item" onclick="location.href='/bets/5050';">
-            <p href="">YES/NO</p>
-            <i class="fa-solid fa-dice"></i>
-          </div>
-          <div class="menu-item" onclick="location.href='/bets/Pitstops';">
-            <p href="">PIT STOPS</p>
-            <i class="fa-solid fa-gears"></i>
-          </div>
-          <div class="menu-item" onclick="location.href='/leagues';">
-            <p href="">MY LEAGUES</p>
-            <i class="fa-solid fa-user-group"></i>
-          </div>
-        </div>
-        <form action="/logout" class="form-width" method="post">
-          <button type="submit" class="register side-menu-button">SIGN OUT</button>
-        </form>
-      <% } %>
-    </div>
-  </div>
-  <div class="header-box">
-    <div class="left-header">
-      <a class="header-logo" href="/">F1 Bets</a>
-    </div>
-    <% if (!isAuth) { %> 
-        <div class="right-header">
-          <form action="/login">
-            <button class="sign-in header-btn" type="submit">SIGN IN</button>
-          </form> 
-          <form action="/registration">
-            <button class="register header-btn" type="submit">REGISTER</button>
-          </form>
-        </div>
-      <% } %>
-      <% if (isAuth) { %> 
-        <div class="right-header">
-          <form action="/account" method="GET">
-            <button class="sign-in header-btn" type="submit">ACCOUNT</button>
-          </form>
-          <form action="/logout" method="POST">
-            <button class="register header-btn" type="submit">SIGN OUT</button>
-          </form> 
-        </div>
-      <% } %> 
-  </div>
-  <div class="tabs-bar">
-    <div class="large-tabs">
-      <a class='tab-head' id='popular' href="/bets/Placement"> PLACEMENT </a> 
-      <a class='tab-head' id='trending' href="/bets/Qualification" > QUALIFICATION </a>
-      <a class='tab-head' id='new' href="/bets/5050"> YES/NO </a>
-      <a class="tab-head" id="pitstop" href="/bets/Pitstops">PIT STOPS</a>
-      <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
-    </div>
-    <div class="small-tabs-bar">
-      <div class="small-tabs-button">
-        <i class="fa-solid fa fa-bars fa-xl" onclick="displayMenu();"></i>
-      </div>
-      <div class="small-logo">
-        <p onclick="location.href='/'">RG</p>
-      </div>
-    </div>
-  </div>
+  <%- include('partials/header_layout') %>
   <div class="bet-box">
     <h1>Account Balance: $<%- balance %>  </h1>
     
