--- a/views/LeagueCreateForm.ejs
+++ b/views/LeagueCreateForm.ejs
@@ -10,7 +10,7 @@
 <body class="flex-body">
     <div class="log-header-box">
         <div class="left-header">
-          <a href="/" class="header-logo">F1 Bets</a>
+          <a href="/" class="header-logo">Race Gambit</a>
         </div>
         <div class="right-header">
             .
