--- a/views/UserInfo.ejs
+++ b/views/UserInfo.ejs
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../assets/css/style.css">
     <title>UserInfo</title>
-    <script>
-    </script>
+    
 </head>
 <body>
   <div class="header-box">
     <div class="left-header">
-      <a class="header-logo" href="/">F1 Bets</a>
+      <a class="header-logo" href="/">Race Gambit</a>
     </div>
     <% if (!isAuth) { %> 
         <div class="right-header">
