--- a/views/LeagueOverview.ejs
+++ b/views/LeagueOverview.ejs
@@ -5,48 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
+    <script src="https://kit.fontawesome.com/212b4b3f17.js" crossorigin="anonymous"></script>
     <title>League Overview</title>
-    <script>
-      function getUserBets(user_id){
-        window.location.href = `https://racegambit.com/UserInfo/${user_id}`;
-      }
-    </script>
+    <%- include('partials/head') %>
 </head>
 <body>
-  <div class="header-box">
-    <div class="left-header">
-      <a class="header-logo" href="/">F1 Bets</a>
-    </div>
-    <% if (!isAuth) { %> 
-        <div class="right-header">
-          <form action="/login">
-            <button class="sign-in header-btn" type="submit">SIGN IN</button>
-          </form> 
-          <form action="/registration">
-            <button class="register header-btn" type="submit">REGISTER</button>
-          </form>
-        </div>
-      <% } %>
-      <% if (isAuth) { %> 
-        <div class="right-header">
-          <form action="/account" method="GET">
-            <button class="sign-in header-btn" type="submit">ACCOUNT</button>
-          </form>
-          <form action="/logout" method="POST">
-            <button class="register header-btn" type="submit">SIGN OUT</button>
-          </form> 
-        </div>
-      <% } %> 
-  </div>
-  <div class="tabs-bar">
-    <div class="tabs">
-      <a class='tab-head' id='popular' href="/bets/Placement"> PLACEMENT </a> 
-      <a class='tab-head' id='trending' href="/bets/Qualification" > QUALIFICATION </a>
-      <a class='tab-head' id='new' href="/bets/5050"> YES/NO </a>
-      <a class="tab-head" id="pitstop" href="/bets/Pitstops">PIT STOPS</a>
-      <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
-    </div>
-  </div>
+    <%- include('partials/body_layout') %>
     <div>
         <h1 style="text-align: center;"><%- leagueName %></h1>
     </div>
