--- a/views/BetInfo.ejs
+++ b/views/BetInfo.ejs
@@ -10,7 +10,7 @@
     <%- include('partials/head') %>
 </head>
 <body>
-  <%- include('partials/body_layout') %>
+  <%- include('partials/header_layout') %>
   <div class="betstats" style="text-align: center;">
     <% if (betCategory == "none") { %> 
       <div style="font-size: 25px; margin-top: 10px;" >No Bet Has Been Made</div>
