--- a/views/LeagueIndex.ejs
+++ b/views/LeagueIndex.ejs
@@ -74,7 +74,7 @@
     </script>
 </head>
 <body>
-  <%- include('partials/body_layout') %>
+  <%- include('partials/header_layout') %>
   <div class="league-bar">
     <form action="/LeagueCreateForm" method="GET">
         <button class="league-btn">Create League</button>
